finish screen ends

--- a/src/main/resources/org/example/mibocatafx/hello-view.fxml
+++ b/src/main/resources/org/example/mibocatafx/hello-view.fxml
@@ -2,71 +2,128 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="534.0" prefWidth="444.0" spacing="20.0" style="-fx-background-color: white; -fx-background-radius: 20;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mibocatafx.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-   <children>
+<HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0"
+      prefWidth="1920.0" style="-fx-background-color: #E2E6E9;" xmlns="http://javafx.com/javafx/17.0.2-ea"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mibocatafx.HelloController">
+   <VBox alignment="CENTER" maxHeight="560.0" maxWidth="450.0" prefHeight="559.0" prefWidth="444.0" spacing="20.0"
+         style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20;"
+         stylesheets="@../../../css/styles.css">
+      <padding>
+         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+      </padding>
+      <effect>
+         <DropShadow>
+            <color>
+               <Color opacity="0.2467532604932785"/>
+            </color>
+         </DropShadow>
+      </effect>
       <ImageView fitHeight="86.0" fitWidth="162.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../assets/logo.png" />
-         </image>
+         <VBox.margin>
+            <Insets top="10.0"/>
+         </VBox.margin>
+         <Image url="@../../../assets/logo.png"/>
       </ImageView>
-      <Label stylesheets="@../../../../java/org/example/mibocatafx/styles.css" text="INICIAR SESIÓN">
+      <Label stylesheets="@../../../css/styles.css" text="INICIAR SESIÓN">
          <font>
-            <Font size="18.0" />
+            <Font name="Poppins Medium" size="18.0"/>
          </font>
       </Label>
-      <VBox alignment="CENTER" prefHeight="431.0" prefWidth="390.0" style="-fx-background-radius: 6; -fx-background-color: white;">
-         <children>
-            <VBox prefHeight="207.0" prefWidth="370.0" snapToPixel="false" spacing="5.0">
-               <children>
-                  <Label alignment="CENTER" text="Correo Electrónico:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </Label>
-                  <TextField prefHeight="39.0" prefWidth="296.0" promptText="Usuario@gmail.com" style="-fx-background-radius: 30; -fx-border-color: #D9D9D9; -fx-border-radius: 30;" styleClass="-fx-border-radius" />
-                  <Label text="Contraseña:">
-                     <VBox.margin>
-                        <Insets top="15.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <PasswordField prefHeight="39.0" prefWidth="296.0" style="-fx-background-radius: 30; -fx-border-color: #D9D9D9; -fx-border-radius: 30;" />
-                  <Label style="-fx-text-fill: #008CFF;" text="¿Has olvidado tu contraseña?">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets top="25.0" />
-                     </VBox.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets left="5.0" />
-               </padding>
-            </VBox>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="39.0" prefWidth="395.0" style="-fx-background-color: #008CFF; -fx-text-fill: white; -fx-background-radius: 20;" text="Acceder">
+      <VBox alignment="CENTER" prefHeight="431.0" prefWidth="390.0"
+            style="-fx-background-radius: 6; -fx-background-color: white;">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+         </padding>
+         <VBox prefHeight="207.0" prefWidth="370.0" snapToPixel="false" spacing="5.0">
+            <padding>
+               <Insets left="5.0"/>
+            </padding>
+            <Label alignment="CENTER" style="-fx-font-family: poppins;" text="Correo Electrónico:">
+               <font>
+                  <Font name="Poppins Medium" size="14.0"/>
+               </font>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets/>
+               </VBox.margin>
+            </Label>
+            <TextField id="userInput" prefHeight="39.0" prefWidth="296.0" promptText="Usuario@gmail.com"
+                       style="-fx-background-radius: 30; -fx-border-color: #D9D9D9; -fx-border-radius: 30;"
+                       styleClass="-fx-border-radius">
+               <font>
+                  <Font name="Poppins Medium" size="12.0"/>
+               </font>
+            </TextField>
+            <Label text="Contraseña:">
+               <VBox.margin>
+                  <Insets top="15.0"/>
                </VBox.margin>
                <font>
-                  <Font size="14.0" />
-               </font></Button>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
+                  <Font size="14.0"/>
+               </font>
+            </Label>
+            <PasswordField id="passInput" prefHeight="39.0" prefWidth="296.0"
+                           style="-fx-background-radius: 30; -fx-border-color: #D9D9D9; -fx-border-radius: 30;"/>
+            <Label style="-fx-text-fill: #008CFF;" text="¿Has olvidado tu contraseña?">
+               <font>
+                  <Font size="14.0"/>
+               </font>
+               <VBox.margin>
+                  <Insets top="25.0"/>
+               </VBox.margin>
+            </Label>
+         </VBox>
+         <Button id="loginButton" alignment="CENTER" mnemonicParsing="false" prefHeight="39.0" prefWidth="395.0"
+                 style="-fx-background-color: #008CFF; -fx-text-fill: white; -fx-background-radius: 20;"
+                 text="Acceder">
+            <VBox.margin>
+               <Insets top="10.0"/>
+            </VBox.margin>
+            <font>
+               <Font size="14.0"/>
+            </font>
+         </Button>
       </VBox>
-   </children>
-</VBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+         <Line endX="35.0" opacity="0.25" startX="-100.0" strokeWidth="0.8">
+            <HBox.margin>
+               <Insets/>
+            </HBox.margin>
+         </Line>
+         <Label text="Accede con">
+            <font>
+               <Font name="Poppins Medium" size="14.0"/>
+            </font>
+            <HBox.margin>
+               <Insets/>
+            </HBox.margin>
+         </Label>
+         <Line endX="35.0" opacity="0.25" startX="-100.0"/>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0"
+            style="-fx-border-color: #D9D9D9; -fx-border-radius: 30; -fx-background-color: white;">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+         </padding>
+         <VBox.margin>
+            <Insets bottom="20.0"/>
+         </VBox.margin>
+         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../../../assets/GoogleLogo.png"/>
+            </image>
+         </ImageView>
+         <Label text="Accede con Google">
+            <font>
+               <Font name="Poppins Medium" size="14.0"/>
+            </font>
+         </Label>
+      </HBox>
+   </VBox>
+</HBox>
