--- a/src/main/resources/screens/loginScreen.fxml
+++ b/src/main/resources/screens/loginScreen.fxml
@@ -9,8 +9,8 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #E2E6E9;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mibocatafx.HelloController">
-   <VBox alignment="CENTER" maxHeight="596.0" maxWidth="462.0" prefHeight="596.0" prefWidth="462.0" spacing="20.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20;" stylesheets="@../../../css/styles.css">
+<HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #E2E6E9;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+   <VBox alignment="CENTER" maxHeight="596.0" maxWidth="462.0" prefHeight="596.0" prefWidth="462.0" spacing="20.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20;" stylesheets="@../css/styles.css">
       <padding>
          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
       </padding>
@@ -25,9 +25,9 @@
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
-         <Image url="@../../../assets/logo.png" />
+         <Image url="@../assets/logo.png" />
       </ImageView>
-      <Label stylesheets="@../../../css/styles.css" text="INICIAR SESIÓN">
+      <Label stylesheets="@../css/styles.css" text="INICIAR SESIÓN">
          <font>
             <Font name="Poppins Medium" size="18.0" />
          </font>
@@ -105,7 +105,7 @@
          </VBox.margin>
          <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../../../assets/GoogleLogo.png" />
+               <Image url="@../assets/GoogleLogo.png" />
             </image>
          </ImageView>
          <Label text="Accede con Google">
