--- a/src/main/resources/screens/loginScreen.fxml
+++ b/src/main/resources/screens/loginScreen.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #E2E6E9;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<HBox fx:id="hboxBackground" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #E2E6E9; -fx-background-image: ..\assets\sandwich-background.png;" styleClass="hbox-background" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mibocatafx.controllers.LoginController">
    <VBox alignment="CENTER" maxHeight="596.0" maxWidth="462.0" prefHeight="596.0" prefWidth="462.0" spacing="20.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20;" stylesheets="@../css/styles.css">
       <padding>
          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
