--- a/src/main/resources/screens/chooseSandwichScreen.fxml
+++ b/src/main/resources/screens/chooseSandwichScreen.fxml
@@ -1,6 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" />
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <Pane prefHeight="64.0" prefWidth="520.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="125.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/Logo2.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+   </top>
+   <center>
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+         <children>
+            <Pane prefHeight="336.0" prefWidth="303.0" style="-fx-border-color: #d9d9d9d9; -fx-border-width: 0px 1px 0px 0px;">
+               <children>
+                  <Pane layoutX="44.0" layoutY="31.0" prefHeight="227.0" prefWidth="213.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10px; -fx-background-color: #f5f5f5; -fx-background-radius: 10px;">
+                     <children>
+                        <Label layoutX="66.0" layoutY="14.0" text="Bocadillo Frio">
+                           <font>
+                              <Font name="Poppins Medium" size="12.0" />
+                           </font>
+                        </Label>
+                     </children></Pane>
+               </children></Pane>
+            <Pane prefHeight="336.0" prefWidth="303.0">
+               <children>
+                  <Pane layoutX="44.0" layoutY="31.0" prefHeight="227.0" prefWidth="213.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10px; -fx-background-color: #f5f5f5; -fx-background-radius: 10px;">
+                     <children>
+                        <Label layoutX="59.0" layoutY="14.0" text="Bocadillo Caliente" />
+                     </children></Pane>
+               </children></Pane>
+         </children>
+      </HBox>
+   </center>
+   <bottom>
+      <Pane prefHeight="47.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <children>
+            <Label layoutX="347.0" layoutY="14.0" text="Pedido:" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Button layoutX="514.0" layoutY="8.0" mnemonicParsing="false" style="-fx-background-radius: 8px; -fx-background-color: #25A4F4; -fx-border-color: white; -fx-border-radius: 7px;" text="Pedir" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <padding>
+                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+               </padding>
+            </Button>
+         </children>
+      </Pane>
+   </bottom>
+</BorderPane>
