--- a/src/main/resources/screens/chooseSandwichScreen.fxml
+++ b/src/main/resources/screens/chooseSandwichScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -13,57 +14,185 @@
             <Insets left="10.0" />
          </padding>
          <children>
-            <ImageView fitHeight="150.0" fitWidth="125.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="50.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../assets/Logo2.png" />
+                  <Image url="@../assets/Logo3.png" />
                </image>
             </ImageView>
+            <Label layoutX="87.0" layoutY="18.0" text="SELECCIONE SU BOCADILLO" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER" layoutX="397.0" layoutY="8.0" maxHeight="-Infinity" maxWidth="-Infinity" spacing="30.0">
+               <children>
+                  <VBox alignment="CENTER" spacing="5.0">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/user%20(1)%201.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="Perfil" textFill="WHITE" />
+                     </children>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </VBox>
+                  <VBox alignment="CENTER" spacing="5.0">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/invoice%202.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="Historial" textFill="WHITE" />
+                     </children>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </VBox>
+                  <VBox alignment="CENTER" spacing="5.0">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../assets/calendar%20(1)%201.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="Calendario" textFill="WHITE" />
+                     </children>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </VBox>
+               </children>
+            </HBox>
          </children>
       </Pane>
    </top>
    <center>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-         <children>
-            <Pane prefHeight="336.0" prefWidth="303.0" style="-fx-border-color: #d9d9d9d9; -fx-border-width: 0px 1px 0px 0px;">
-               <children>
-                  <Pane layoutX="44.0" layoutY="31.0" prefHeight="227.0" prefWidth="213.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10px; -fx-background-color: #f5f5f5; -fx-background-radius: 10px;">
-                     <children>
-                        <Label layoutX="66.0" layoutY="14.0" text="Bocadillo Frio">
-                           <font>
-                              <Font name="Poppins Medium" size="12.0" />
-                           </font>
-                        </Label>
-                     </children></Pane>
-               </children></Pane>
-            <Pane prefHeight="336.0" prefWidth="303.0">
-               <children>
-                  <Pane layoutX="44.0" layoutY="31.0" prefHeight="227.0" prefWidth="213.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10px; -fx-background-color: #f5f5f5; -fx-background-radius: 10px;">
-                     <children>
-                        <Label layoutX="59.0" layoutY="14.0" text="Bocadillo Caliente" />
-                     </children></Pane>
-               </children></Pane>
-         </children>
-      </HBox>
-   </center>
-   <bottom>
-      <Pane prefHeight="47.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+      <HBox style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
-         <children>
-            <Label layoutX="347.0" layoutY="14.0" text="Pedido:" textFill="WHITE">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
-            <Button layoutX="514.0" layoutY="8.0" mnemonicParsing="false" style="-fx-background-radius: 8px; -fx-background-color: #25A4F4; -fx-border-color: white; -fx-border-radius: 7px;" text="Pedir" textFill="WHITE">
+         <Pane style="-fx-border-color: #d9d9d9d9; -fx-border-width: 0px 1px 0px 0px;">
+            <Pane layoutX="44.0" layoutY="48.0" prefHeight="227.0" prefWidth="213.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10px; -fx-background-color: #f5f5f5; -fx-background-radius: 10px;">
+               <Label layoutX="41.0" layoutY="14.0" text="Bocadillo de atún">
+                  <font>
+                     <Font size="17.0" />
+                  </font>
+               </Label>
+               <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="23.0" layoutY="64.0" prefWidth="166.0" text="Bocadillo de atún con lechuga y mayonesa" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                  <font>
+                     <Font size="16.0" />
+                  </font>
+               </Label>
+               <HBox layoutX="48.0" layoutY="148.0" spacing="20.0">
+                  <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <Image url="@../assets/fish.png" />
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <Image url="@../assets/egg.png" />
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <Image url="@../assets/wheat.png" />
+                  </ImageView>
+               </HBox>
+               <Label layoutX="97.0" layoutY="188.0" text="2€">
+                  <font>
+                     <Font size="16.0" />
+                  </font>
+               </Label>
+            </Pane>
+            <Label layoutX="122.0" layoutY="14.0" text="Bocadillo Frio">
                <font>
                   <Font size="14.0" />
                </font>
-               <padding>
-                  <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
-               </padding>
-            </Button>
-         </children>
+            </Label>
+            <ImageView fitHeight="150.0" fitWidth="20.0" layoutX="95.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@../assets/copo-de-nieve%201.png" />
+            </ImageView>
+            <padding>
+               <Insets right="50.0" />
+            </padding>
+         </Pane>
+         <Pane>
+            <HBox.margin>
+               <Insets />
+            </HBox.margin>
+            <Pane layoutX="44.0" layoutY="48.0" prefHeight="227.0" prefWidth="213.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10px; -fx-background-color: #f5f5f5; -fx-background-radius: 10px;">
+               <Label layoutX="38.0" layoutY="14.0" text="Bocadillo de tortilla">
+                  <font>
+                     <Font size="16.0" />
+                  </font>
+               </Label>
+               <Label layoutX="24.0" layoutY="61.0" prefHeight="60.0" prefWidth="164.0" text="Bocadillo de tortilla de patatas" textOverrun="CLIP" wrapText="true">
+                  <font>
+                     <Font size="16.0" />
+                  </font>
+               </Label>
+               <HBox layoutX="48.0" layoutY="139.0" spacing="20.0">
+                  <children>
+                     <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@../assets/egg.png" />
+                        </image>
+                     </ImageView>
+                     <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@../assets/fish.png" />
+                        </image>
+                     </ImageView>
+                     <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@../assets/wheat.png" />
+                        </image>
+                     </ImageView>
+                  </children>
+               </HBox>
+               <Label layoutX="97.0" layoutY="188.0" text="3€">
+                  <font>
+                     <Font size="16.0" />
+                  </font>
+               </Label>
+            </Pane>
+            <Label layoutX="109.0" layoutY="14.0" text="Bocadillo Caliente">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="150.0" fitWidth="20.0" layoutX="81.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@../assets/flame%201.png" />
+            </ImageView>
+         </Pane>
+      </HBox>
+   </center>
+   <bottom>
+      <Pane prefHeight="48.0" prefWidth="600.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <Label layoutX="14.0" layoutY="14.0" text="Pedido:" textFill="WHITE">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <Button fx:id="orderButton" contentDisplay="CENTER" layoutX="514.0" layoutY="8.0" mnemonicParsing="false" style="-fx-background-radius: 15px; -fx-background-color: #25A4F4; -fx-border-radius: 3px; -fx-border-color: white; -fx-border-radius: 15px;" text="Pedir" textFill="WHITE">
+            <font>
+               <Font size="14.0" />
+            </font>
+            <padding>
+               <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
+            </padding>
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor>
+         </Button>
+         <Label layoutX="327.0" layoutY="14.0" text="Ningún pedido seleccinado" textFill="WHITE">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
       </Pane>
    </bottom>
 </BorderPane>
