--- a/src/main/resources/screens/loginScreen.fxml
+++ b/src/main/resources/screens/loginScreen.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:id="hboxBackground" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #E2E6E9;" styleClass="hbox-background" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mibocatafx.controllers.LoginController">
+<HBox fx:id="hboxBackground" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: #E2E6E9;" styleClass="hbox-background" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mibocatafx.controllers.LoginController">
    <VBox alignment="CENTER" maxHeight="596.0" maxWidth="462.0" prefHeight="596.0" prefWidth="462.0" spacing="20.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20;" stylesheets="@../css/styles.css">
       <padding>
          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -21,15 +21,15 @@
             </color>
          </DropShadow>
       </effect>
-      <ImageView fitHeight="86.0" fitWidth="162.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="86.0" fitWidth="170.0" pickOnBounds="true" preserveRatio="true">
          <VBox.margin>
-            <Insets top="10.0" />
+            <Insets bottom="10.0" top="10.0" />
          </VBox.margin>
-         <Image url="@../assets/logo.png" />
+         <Image url="@../assets/blueLogo.png" />
       </ImageView>
       <Label stylesheets="@../css/styles.css" text="INICIAR SESIÓN">
          <font>
-            <Font name="Poppins Medium" size="22.0" />
+            <Font name="System Bold" size="22.0" />
          </font>
       </Label>
       <VBox alignment="CENTER" prefHeight="431.0" prefWidth="390.0" style="-fx-background-radius: 6; -fx-background-color: white;">
@@ -42,7 +42,7 @@
             </padding>
             <Label alignment="CENTER" style="-fx-font-family: poppins;" text="Correo Electrónico:">
                <font>
-                  <Font name="Agency FB" size="14.0" />
+                  <Font name="Arial" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets />
@@ -114,5 +114,8 @@
             </font>
          </Label>
       </HBox>
+      <HBox.margin>
+         <Insets />
+      </HBox.margin>
    </VBox>
 </HBox>
