--- a/src/main/resources/screens/chooseSandwichScreen.fxml
+++ b/src/main/resources/screens/chooseSandwichScreen.fxml
@@ -7,33 +7,36 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <Pane prefHeight="64.0" prefWidth="520.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+      <Pane prefHeight="80.0" prefWidth="520.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
          <padding>
             <Insets left="10.0" />
          </padding>
          <children>
-            <ImageView fitHeight="150.0" fitWidth="50.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="70.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/Logo3.png" />
                </image>
             </ImageView>
-            <Label layoutX="87.0" layoutY="18.0" text="SELECCIONE SU BOCADILLO" textFill="WHITE">
+            <Label layoutX="120.0" layoutY="20.0" text="SELECCIONE SU BOCADILLO" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER" layoutX="1717.0" layoutY="8.0" maxHeight="-Infinity" maxWidth="-Infinity" spacing="30.0">
+            <HBox alignment="CENTER" layoutX="1600.0" layoutY="8.0" maxHeight="-Infinity" maxWidth="-Infinity" spacing="50.0">
                <children>
                   <VBox alignment="CENTER" spacing="5.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="150.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../assets/user%20(1)%201.png" />
                            </image>
                         </ImageView>
-                        <Label text="Perfil" textFill="WHITE" />
+                        <Label text="Perfil" textFill="WHITE">
+                           <font>
+                              <Font size="18.0" />
+                           </font></Label>
                      </children>
                      <cursor>
                         <Cursor fx:constant="HAND" />
@@ -41,12 +44,15 @@
                   </VBox>
                   <VBox alignment="CENTER" spacing="5.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="150.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../assets/invoice%202.png" />
                            </image>
                         </ImageView>
-                        <Label text="Historial" textFill="WHITE" />
+                        <Label text="Historial" textFill="WHITE">
+                           <font>
+                              <Font size="18.0" />
+                           </font></Label>
                      </children>
                      <cursor>
                         <Cursor fx:constant="HAND" />
@@ -54,12 +60,15 @@
                   </VBox>
                   <VBox alignment="CENTER" spacing="5.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="150.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../assets/calendar%20(1)%201.png" />
                            </image>
                         </ImageView>
-                        <Label text="Calendario" textFill="WHITE" />
+                        <Label text="Calendario" textFill="WHITE">
+                           <font>
+                              <Font size="18.0" />
+                           </font></Label>
                      </children>
                      <cursor>
                         <Cursor fx:constant="HAND" />
@@ -79,7 +88,7 @@
             <Pane layoutX="134.0" layoutY="119.0" prefHeight="659.0" prefWidth="692.0" style="-fx-border-color: #25A4F4; -fx-border-radius: 10px; -fx-background-color: #f5f5f5; -fx-background-radius: 10px;">
                <Label layoutX="41.0" layoutY="14.0" text="Bocadillo de atún">
                   <font>
-                     <Font size="17.0" />
+                     <Font size="26.0" />
                   </font>
                </Label>
                <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="23.0" layoutY="64.0" prefWidth="166.0" text="Bocadillo de atún con lechuga y mayonesa" textOverrun="WORD_ELLIPSIS" wrapText="true">
@@ -104,12 +113,12 @@
                   </font>
                </Label>
             </Pane>
-            <Label layoutX="122.0" layoutY="14.0" text="Bocadillo Frio">
+            <Label layoutX="360.0" layoutY="35.0" text="Bocadillo Frio">
                <font>
-                  <Font size="20.0" />
+                  <Font size="30.0" />
                </font>
             </Label>
-            <ImageView fitHeight="150.0" fitWidth="20.0" layoutX="95.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="50.0" layoutX="300.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../assets/copo-de-nieve%201.png" />
             </ImageView>
          </Pane>
