--- a/src/main/resources/screens/cocina.fxml
+++ b/src/main/resources/screens/cocina.fxml
@@ -62,7 +62,7 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                         </HBox>
-                        <Button fx:id="searchButton" layoutX="543.0" layoutY="4.0" mnemonicParsing="false" style="-fx-background-color: white; -fx-border-color: #25A4F4; -fx-border-radius: 10; -fx-background-radius: 10;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="543.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
+                        <Button fx:id="searchButton" layoutX="543.0" layoutY="4.0" mnemonicParsing="false" onAction="#filterTable" style="-fx-background-color: white; -fx-border-color: #25A4F4; -fx-border-radius: 10; -fx-background-radius: 10;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="543.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
                            <graphic>
                               <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -104,18 +104,14 @@
    <bottom>
       <AnchorPane prefHeight="60.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
          <children>
-            <Pane layoutX="14.0" layoutY="16.0">
+            <Pane layoutX="14.0" layoutY="18.0" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="18.0">
                <children>
-                  <ComboBox fx:id="numPages" promptText="10" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
+                  <Button fx:id="clearFiltersButton" mnemonicParsing="false" onAction="#clearFilters" style="-fx-background-color: white; -fx-background-radius: 10;" text="Borrar filtros" textFill="#25a4f4">
                      <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                      </padding>
-                  </ComboBox>
-               </children>
-            </Pane>
+                  </Button>
+               </children></Pane>
             <Pane layoutX="492.0" layoutY="22.0" prefWidth="94.0" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="22.0">
                <children>
                   <Label fx:id="resultsCount" text="1 - 10 de 100" textFill="WHITE">
@@ -127,7 +123,7 @@
             </Pane>
             <HBox alignment="CENTER" layoutX="170.0" layoutY="18.0" prefWidth="261.0" spacing="20.0" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="169.0" AnchorPane.topAnchor="18.0">
                <children>
-                  <Button fx:id="previusPage" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="&lt; Anterior" textFill="WHITE">
+                  <Button fx:id="previusPage" mnemonicParsing="false" onAction="#previusPage" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="&lt; Anterior" textFill="WHITE">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -140,7 +136,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button fx:id="nextPage" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="Siguiente &gt;" textFill="WHITE">
+                  <Button fx:id="nextPage" mnemonicParsing="false" onAction="#nextPage" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="Siguiente &gt;" textFill="WHITE">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
