--- a/src/main/resources/screens/adminAlumnoCrud.fxml
+++ b/src/main/resources/screens/adminAlumnoCrud.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
@@ -82,7 +83,7 @@
                   </VBox>
                </children>
             </VBox>
-            <Button id="logOutButton" fx:id="logOutButton" layoutY="551.0" mnemonicParsing="false" onAction="#logOut" text="Cerrar Sesión" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
+            <Button id="logOutButton" fx:id="logOutButton" layoutY="551.0" mnemonicParsing="false" onAction="#logOut" text="Cerrar Sesión" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
          </children>
       </AnchorPane>
    </left>
@@ -103,7 +104,7 @@
                         </Label>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <HBox id="filtersBox" prefHeight="25.0" spacing="15.0">
+                              <HBox id="filtersBox" spacing="15.0">
                                  <children>
                                     <TextField fx:id="nameInput" prefHeight="25.0" prefWidth="100.0" promptText="Nombre...">
                                        <HBox.margin>
@@ -116,10 +117,19 @@
                                           <Cursor fx:constant="HAND" />
                                        </cursor>
                                     </ComboBox>
+                                    <Button mnemonicParsing="false" onAction="#filterTable">
+                                       <graphic>
+                                          <ImageView fitHeight="150.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../assets/search-white.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
                                  </children>
                               </HBox>
                               <Region prefHeight="25.0" HBox.hgrow="ALWAYS" />
-                              <HBox id="addButton" fx:id="addNewAlumnoButton" accessibleRole="BUTTON" alignment="CENTER" prefHeight="100.0" spacing="5.0">
+                              <HBox id="addButton" fx:id="addNewAlumnoButton" accessibleRole="BUTTON" alignment="CENTER" onMouseClicked="#addNewAlumno" prefHeight="100.0" spacing="5.0">
                                  <children>
                                     <ImageView fitHeight="150.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -140,7 +150,7 @@
             </AnchorPane>
          </top>
          <center>
-            <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="table" prefHeight="200.0" prefWidth="621.0" BorderPane.alignment="CENTER">
               <columns>
                   <TableColumn fx:id="idTableColumn" prefWidth="75.0" text="Id" />
                 <TableColumn fx:id="nameTableColumn" prefWidth="75.0" text="Nombre" />
@@ -157,6 +167,52 @@
                </columnResizePolicy>
             </TableView>
          </center>
+          <bottom>
+              <AnchorPane prefHeight="60.0" style="-fx-background-color: #25A4F4;" BorderPane.alignment="CENTER">
+                  <children>
+                      <Pane layoutX="14.0" layoutY="18.0" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="18.0">
+                          <cursor>
+                              <Cursor fx:constant="HAND" />
+                          </cursor>
+                     <children>
+                        <Button id="clearFiltersButton" mnemonicParsing="false" onAction="#clearFilters" text="Borrar filtros" />
+                     </children></Pane>
+                      <Pane layoutX="492.0" layoutY="22.0" prefWidth="94.0" AnchorPane.bottomAnchor="21.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="22.0">
+                          <children>
+                              <Label fx:id="resultsCount" text="1 - 10 de 100" textFill="WHITE">
+                                  <font>
+                                      <Font size="16.0" />
+                                  </font>
+                              </Label>
+                          </children>
+                      </Pane>
+                      <HBox alignment="CENTER" layoutX="170.0" layoutY="18.0" prefWidth="261.0" spacing="20.0" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="169.0" AnchorPane.topAnchor="18.0">
+                          <children>
+                              <Button fx:id="previusPage" mnemonicParsing="false" onAction="#previusPage" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="&lt; Anterior" textFill="WHITE">
+                                  <cursor>
+                                      <Cursor fx:constant="HAND" />
+                                  </cursor>
+                                  <padding>
+                                      <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                  </padding>
+                              </Button>
+                              <Label fx:id="pagesCount" text="1/7" textFill="WHITE">
+                                  <font>
+                                      <Font size="16.0" />
+                                  </font>
+                              </Label>
+                              <Button fx:id="nextPageButton" mnemonicParsing="false" onAction="#nextPage" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 10;" text="Siguiente &gt;" textFill="WHITE">
+                                  <cursor>
+                                      <Cursor fx:constant="HAND" />
+                                  </cursor>
+                                  <padding>
+                                      <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                  </padding>
+                              </Button>
+                          </children>
+                      </HBox>
+                  </children></AnchorPane>
+          </bottom>
       </BorderPane>
    </center>
 </BorderPane>
